# Scheduler

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
app/: CMakeLists.txt  main.c
include/: scheduler.h  task_scheduler.h
lib/: CMakeLists.txt
src/: scheduler.c  task_scheduler.c
